# DisasterServer

./: .gitignore  CMakeLists.txt  DisasterServer.sln  README.MD  README.md  betterserver.kdev4
.github/workflows/: build.yml  delete.yml
.kdev4/: betterserver.kdev4
DisasterServer/: Ban.cs  BanList.cs  DisasterServer.csproj  Ext.cs  FastBitReader.cs  KickData.cs  KickList.cs  Options.cs  PacketType.cs  Program.cs  TcpPacket.cs  Terminal.cs  UdpPacket.cs  Whitelist.cs
DisasterServer/Data/: Character.cs  ExeCharacter.cs  OSType.cs  Peer.cs  Player.cs  RevivalData.cs  Vector2.cs
DisasterServer/Entities/: Act9Wall.cs  BlackRing.cs  CreamRing.cs  DTAss.cs  DTBall.cs  DTTailsDoll.cs  EggmanTracker.cs  Entity.cs  ExellerClone.cs  Fart.cs  GHZThunder.cs  HDDoor.cs  KAFSpeedBooster.cs  LCChainController.cs  LCEye.cs  MovingSpikeController.cs  NAPIce.cs  NAPSnowball.cs  NotPerfectController.cs  PFLift.cs  RMZShard.cs  RMZSlime.cs  RMZSlimeSpawner.cs  Ring.cs  TCGom.cs  TailsProjectile.cs  VVLava.cs  VVVase.cs  YCRSmokeController.cs
DisasterServer/ExeNet/: TcpServer.cs  TcpSession.cs  UdpServer.cs
DisasterServer/Maps/: Act9.cs  AngelIsland.cs  DarkTower.cs  DesertTown.cs  DotDotDot.cs  FartZone.cs  GreenHill.cs  HauntingDream.cs  HideAndSeek2.cs  KindAndFair.cs  LimpCity.cs  MajinForest.cs  Map.cs  NastyParadise.cs  NotPerfect.cs  PricelessFreedom.cs  RavineMist.cs  TortureCave.cs  VolcanoValley.cs  YouCantRun.cs
DisasterServer/Session/: MulticastServer.cs  Server.cs  SharedServer.cs  SharedServerSession.cs  StatServer.cs  StatServerSession.cs  State.cs
DisasterServer/State/: CharacterSelect.cs  Game.cs  Lobby.cs  MapVote.cs  MapVoteMap.cs  State.cs
DisasterServer/UI/: CmdWindow.cs  MainWindow.cs  UIWrapper.cs  Window.cs
DisasterServer/res/: ServerConfig.json
disasterserver/: CMakeLists.txt  CMath.c  CharSelect.c  Config.c  DyList.c  Game.c  Lib.c  Lobby.c  Log.c  Main.c  Maps.c  Mapvote.c  Player.c  Server.c  Vote.c  cJSON.c
disasterserver/entities/: Act9Wall.c  BlackRing.c  CreamRing.c  DTBall.c  DTStalactits.c  Dummy.c  EggmanTracker.c  ExellerClone.c  HDDoor.c  HillThunder.c  KAFSpeedBox.c  LCChain.c  LCEye.c  NAPIce.c  NAPSnowball.c  NotPerfect.c  PFLift.c  RMZShard.c  RMZSlug.c  Ring.c  SpkieController.c  TCAcid.c  TailsDoll.c  TailsProjectile.c  VVLava.c  YouCantRun.c
disasterserver/io/: Packet.c  TcpListener.c  Time.c  UdpListener.c
disasterserver/maps/: Act9.c  DarkTower.c  DotDotDot.c  FartZone.c  HauntingDream.c  HideAndSeek.c  Hill.c  KindAndFair.c  LimpCity.c  MajinForest.c  NastyParadise.c  NotPerfect.c  PricelessFreedom.c  RavineMist.c  TortureCave.c  VolcanoValley.c  YouCantRun.c
include/: Api.h  CMath.h  Colors.h  Config.h  DyList.h  Lib.h  Log.h  Maps.h  Player.h  Server.h  States.h  Vote.h  cJSON.h
include/entities/: Act9Wall.h  BlackRing.h  CreamRing.h  DTBall.h  DTStalactits.h  Dummy.h  EggmanTracker.h  ExellerClone.h  HDDoor.h  HillThunder.h  KAFSpeedBox.h  LCChain.h  LCEye.h  NAPIce.h  NAPSnowball.h  NotPerfect.h  PFLift.h  RMZShard.h  (+9 more)
(+22 files in other folders)
